--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -44,8 +44,5 @@
 }
 
 .myemail {
-  /* position: fixed;
-  bottom: 0;
-  right: 0;
-  align-self: flex-end; */
+  /* position: fixed; */
 }
