--- a/portfolio/src/css/Email.css
+++ b/portfolio/src/css/Email.css
@@ -2,9 +2,9 @@
     position:absolute;
     right:0;
     bottom:0;
-    margin-bottom: 60px;
-    margin-right: 70px;
-    font-size: 2vw;
+    margin-bottom: 40px;
+    margin-right: 50px;
+    font-size: 20px;
     color: white;
     /* content: 'vaibhavilokegaonkar'; */
     /* rotate: -90deg; */
