--- a/portfolio/src/css/Navbar.css
+++ b/portfolio/src/css/Navbar.css
@@ -81,9 +81,6 @@
     .right > .MuiSvgIcon-root {
         display: flex;
     }
-    /* .left {
-        display: none;
-    } */
     .right #hidden {
         position: absolute;
         right: 0px;
